add heading and basic stlying.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title></title>
+    <title>Broadway Design</title>
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-
+    <h1 class="header">Broadway Design</h1>
+      <h2 class="home">Home</h2>
+      <h2 class="process">Process</h2>
   </body>
 </html>
