--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-    <h1 class="header">Broadway Design</h1>
-      <h2 class="home">Home</h2>
-      <h2 class="process">Process</h2>
+    <div class="page_top">
+      <h1 class="header">Broadway Design</h1>
+        <h2 class="home">Home</h2>
+        <h2 class="process">Process</h2>
+        <h2 class="work">Work</h2>
+        <h2 class="team">Team</h2>
+        <h2 class="contact">Contact</h2>
+    </div>
+    <div class="body">
+      <h3 class="pic_heading">Our Process</h3>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
+        <h3 class="pic_heading">Identify</h3>
+        <p>We focus on the most important details</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
+        <h3 class="pic_heading">Understand</h3>
+        <p>We study our projects inside and out</p>
+     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
+       <h3 class="pic_heading">Execute</h3>
+       <p>We put everything we have into our work</p>
+    </div>
+    <div class="page_bottom">
+      <h3 class="bottom_heading">Designed in New York</h3>
+
+
+
   </body>
 </html>
