--- a/index.html
+++ b/index.html
@@ -17,17 +17,27 @@
       <h3 class="pic_heading">Our Process</h3>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
         <h3 class="pic_heading">Identify</h3>
-        <p>We focus on the most important details</p>
+        <p class="sub">We focus on the most important details</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
         <h3 class="pic_heading">Understand</h3>
-        <p>We study our projects inside and out</p>
+        <p class="sub">We study our projects inside and out</p>
      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
        <h3 class="pic_heading">Execute</h3>
-       <p>We put everything we have into our work</p>
+       <p class="sub">We put everything we have into our work</p>
     </div>
-    <div class="page_bottom">
+    <div class="page_middle">
       <h3 class="bottom_heading">Designed in New York</h3>
-
+      <h3 class="pic_heading">Portfolio</h3>
+        <p class="sub">Coming Soon</p>
+      <h3 class="pic_heading">Team</h3>
+        <p class="sub">We're Hiring</p>
+      <h3 class="pic_heading">Contact</h3>
+        <p class="sub">Phone: (555)-555-5555</p>
+        <p class="sub">E-mail: test@example.com</p>
+        <p class="sub">Twitter: @test</p>
+    </div>
+    </div class="page_bottom">
+      <p class="cr">&#9400; Broadway 2016 <h2 class="home">Home</p>
 
 
   </body>
